# juya_agent

./: .gitignore  .gitmodules  LICENSE  README.md  chat.py  juya_agents.py  main.py  pyproject.toml  web.py
.ai-docs/: ARCHITECTURE_COMPARISON.md  FINAL_SAMPLING_GUIDE.md  MAIN_PY_USAGE.md  favicon设置修改说明.md  history_feature_documentation.md  https-mixed-content-issue.md  mobile-links-fix.md  rename_files.py  前端文件查询逻辑修改说明.md  文件重命名修改说明.md
frontend/: README.md  app.py  requirements.txt
frontend/static/css/: style.css
frontend/templates/: index.html
utils/: juya_agents.py  logger.py  tools.py  tx_speech_util.py  video_fallback.py  web_generator.py
utils/modules/: bilibili_api.py  content_formatter.py  email_sender.py  subtitle_processor_ai.py
