[project]
name = "juya-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "markdown>=3.10",
    "openai>=2.8.1",
    "openai-agents>=0.6.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
